@@ -80,7 +80,7 @@ public class MeasureCollector {
     measures.entrySet().stream()
       .map(entry -> Map.entry(entry.getKey(), entry.getValue().stream().mapToLong(value -> value).sum()))
       .sorted(Comparator.comparingLong(Map.Entry::getValue))
-      .map(entry -> String.format("%s - %d", entry.getKey(), entry.getValue()))
+      .map(entry -> "%s - %d".formatted(entry.getKey(), entry.getValue()))
       .forEach(LOGGER::info);
   }
 }
