@@ -71,7 +71,7 @@ public class CognitiveComplexityComputer
 
   private final DocumentContext documentContext;
 
-  @Setter(onMethod = @__({@Autowired}), value = AccessLevel.PACKAGE)
+  @Setter(onMethod_ ={@Autowired}, value = AccessLevel.PACKAGE)
   private StringInterner stringInterner;
 
   private int fileComplexity;
@@ -398,9 +398,9 @@ public class CognitiveComplexityComputer
   private void addSecondaryLocation(Token token, int increment, int nested) {
     String message;
     if (nested > 0) {
-      message = String.format("+%d (nesting = %d)", increment, nested);
+      message = "+%d (nesting = %d)".formatted(increment, nested);
     } else {
-      message = String.format("+%d", increment);
+      message = "+%d".formatted(increment);
     }
     var secondaryLocation = new ComplexitySecondaryLocation(Ranges.create(token), stringInterner.intern(message));
     List<ComplexitySecondaryLocation> locations;
