@@ -80,6 +80,6 @@ public abstract class AbstractObjectPool<T> {
 
   @Override
   public synchronized String toString() {
-    return String.format("Pool available=%d inUse=%d", available.size(), inUse.size());
+    return "Pool available=%d inUse=%d".formatted(available.size(), inUse.size());
   }
 }
