@@ -32,7 +32,6 @@ import org.junit.jupiter.api.Test;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 
 import static com.github._1c_syntax.bsl.languageserver.util.Assertions.assertThat;
@@ -147,7 +146,7 @@ class UnsafeFindByCodeDiagnosticTest extends AbstractDiagnosticTest<UnsafeFindBy
   @SneakyThrows
   DocumentContext createDocumentContextFromFile(String pathToFile) {
     Path path = Absolute.path("src/test/resources/metadata/UnsafeFindByCodeDiagnostic");
-    Path testFile = Paths.get(pathToFile).toAbsolutePath();
+    Path testFile = Path.of(pathToFile).toAbsolutePath();
 
     initServerContext(path);
     return TestUtils.getDocumentContext(
